Fixed vertical alignment of the month select.

--- a/frontend/src/assets/css/admin/_static_line_course_calendar.sass
+++ b/frontend/src/assets/css/admin/_static_line_course_calendar.sass
@@ -100,7 +100,7 @@ $tile-borders: solid 0.05em #ccc
     margin: 0 0.2em
 
   label, select
-    margin-top: 1em
+    margin-top: 0.4em
 
   button
     padding: 0.3em
